# aruco_unity

./: .gitignore  CMakePresets.json  aruco_unity.cpp  aruco_unity.h  aruco_unity_debug_dump.cpp  aruco_unity_debug_dump.h  test_main.cpp
cmake/android/: CMakeLists.txt  CMakePresets.json
cmake/windows/: CMakeLists.txt
